--- a/src/app/shared/dialogs/add-grn/add-material/add-material.component.html
+++ b/src/app/shared/dialogs/add-grn/add-material/add-material.component.html
@@ -15,7 +15,7 @@
           </div>
           <div class="col-xs-1 p-r-0 p-l-0">
             <mat-form-field class="border-select label-font-size width-90 mat-form-field-flex-mm-padding">
-              <mat-select placeholder="Unit*" formControlName="unit">
+              <mat-select placeholder="Unit*" formControlName="materialUnit">
                 <mat-option *ngFor="let unit of materialUnit" [value]="unit">
                   <span>
                     {{ unit }}
@@ -27,7 +27,7 @@
           <div class="col-xs-2 text-center">
             <span>
               <mat-form-field class="border-input p-l-0 label-font-size width-90">
-                <input formControlName="quantity" appTwoDigitDecimaNumber matInput type="text" placeholder="Quantity*" />
+                <input formControlName="deliveredQty" appTwoDigitDecimaNumber matInput type="text" placeholder="Quantity*" />
               </mat-form-field>
             </span>
           </div>
@@ -41,14 +41,14 @@
           <div class="col-xs-2 text-center">
             <span>
               <mat-form-field class="border-input label-font-size width-90">
-                <input formControlName="unitPrice" appTwoDigitDecimaNumber matInput type="text" placeholder="Unit Price*({{ currency }})" />
+                <input formControlName="materialUnitPrice" appTwoDigitDecimaNumber matInput type="text" placeholder="Unit Price*({{ currency }})" />
               </mat-form-field>
             </span>
           </div>
           <div class="col-xs-2 text-left p-r-0">
             <span>
               <mat-form-field class="border-input label-font-size width-100">
-                <input formControlName="totalAmount" appTwoDigitDecimaNumber matInput type="text" placeholder="Total Amt*({{ currency }})" />
+                <input formControlName="amount" appTwoDigitDecimaNumber matInput type="text" placeholder="Total Amt*({{ currency }})" />
               </mat-form-field>
             </span>
           </div>
@@ -70,7 +70,7 @@
     </div>
   </div>
   <div mat-dialog-actions class="flex-column">
-    <button mat-button matStepperNext mat-raised-button class="main-background-color main-button color-white m-b-5 mb-0">
+    <button mat-button mat-raised-button [disabled]="addMaterialsForm.invalid" class="main-background-color main-button color-white m-b-5 mb-0">
       <!-- <button mat-button matStepperNext mat-raised-button class="main-background-color main-button color-white m-b-5 mb-0" [disabled]="addMaterialsForm && !addMaterialsForm.valid"> -->
       Next
     </button>
