--- a/src/app/shared/dialogs/add-grn/add-supplier/add-supplier.component.html
+++ b/src/app/shared/dialogs/add-grn/add-supplier/add-supplier.component.html
@@ -1,6 +1,6 @@
-<form *ngIf="this.form" [formGroup]="this.form">
+<form *ngIf="this.form" [formGroup]="this.form" (ngSubmit)="onSubmit()">
   <div class="row">
-    <span class="col-xs-3 display-flex">
+    <span class="col-md-3 col-xs-6 display-flex">
       <span>
         <span class="text-semi-bold"> GRN No.-</span>
         <mat-form-field class="border-input width-50">
@@ -8,9 +8,9 @@
         </mat-form-field>
       </span>
     </span>
-    <span class="col-xs-3 display-flex">
-      <span class="text-semi-bold">
-        Date-
+    <span class="col-md-3 col-xs-6 display-flex">
+      <span>
+        <span class="text-semi-bold"> Date-</span>
         <mat-form-field class="border-input width-50">
           <mat-label>GRN Date</mat-label>
           <input #dateinput matInput formControlName="grnDate" [matDatepicker]="endDate" (click)="endDate.open()" readonly />
@@ -24,21 +24,19 @@
   <div class="p-t-20">
     <h4>Supplier's Details</h4>
     <div class="row">
-      <div class="col-xs-3">
-        <mat-form-field class="width-95 border-select mat-form-field-flex-mm-padding label-font-size">
-          <input type="text" placeholder="Contact Person*" matInput formControlName="supplierName" />
-          <!-- <input type="text" placeholder="Contact Person*" matInput formControlName="materialName" [matAutocomplete]="auto" /> -->
-
-          <!-- <mat-autocomplete #auto="matAutocomplete" [panelWidth]="'15em'" [displayWith]="displayFn">
-                    <mat-option matTooltip=" {{ option.materialName }}" *ngFor="let option of this.filterMaterialName | async" [value]="option">
-                      {{ option.materialName }}
-                    </mat-option>
-                  </mat-autocomplete> -->
+      <div class="col-md-3">
+        <mat-form-field class="width-95 border-select mat-form-field-flex-mm-padding label-font-size" [ngClass]="{'width-95': isMobile}">
+          <input type="text" placeholder="Contact Person*" matInput formControlName="supplierName" [matAutocomplete]="auto" />
+          <mat-autocomplete #auto="matAutocomplete" [panelWidth]="'15em'" [displayWith]="displayFn">
+            <mat-option matTooltip=" {{ option.supplier_name }}" *ngFor="let option of this.filterSupplierName | async" [value]="option">
+              {{ option.supplier_name }}
+            </mat-option>
+          </mat-autocomplete>
         </mat-form-field>
       </div>
 
-      <div class="col-xs-3">
-        <mat-form-field class="border-select mat-form-field-flex-mm-padding">
+      <div class="col-md-3 col-xs-12">
+        <mat-form-field class="border-select mat-form-field-flex-mm-padding" [ngClass]="{'width-95': isMobile}">
           <mat-select formControlName="countryCode">
             <div class="display-flex">
               <input
@@ -71,14 +69,14 @@
           </mat-select>
         </mat-form-field>
       </div>
-      <div class="col-xs-3">
-        <mat-form-field class="border-input">
-          <input matInput type="text" formControlName="contact_no" placeholder="Phone No." />
-          <small *ngIf="form.controls['contact_no'].hasError('pattern') && form.controls['contact_no'].touched" class="form-error-msg"> Enter Valid Phone No</small>
+      <div class="col-md-3 col-xs-12">
+        <mat-form-field class="border-input" [ngClass]="{'width-95': isMobile}">
+          <input matInput type="text" formControlName="contact" placeholder="Phone No." />
+          <small *ngIf="form.controls['contact'].hasError('pattern') && form.controls['contact'].touched" class="form-error-msg"> Enter Valid Phone No</small>
         </mat-form-field>
       </div>
-      <div class="col-xs-3">
-        <mat-form-field class="border-input">
+      <div class="col-md-3 col-xs-12">
+        <mat-form-field class="border-input" [ngClass]="{'width-95': isMobile}">
           <input matInput type="email" formControlName="email" placeholder="Email *" />
           <small *ngIf="form.controls['email'].hasError('required') && form.controls['email'].touched" class="form-error-msg"> Email is required </small>
           <small *ngIf="form.controls['email'].hasError('pattern') && form.controls['email'].touched" class="form-error-msg"> Enter Valid Email</small>
@@ -86,8 +84,8 @@
       </div>
     </div>
   </div>
-  <div class="row">
-    <div class="col-xs-5">
+  <div class="row p-t-20">
+    <div class="col-md-5">
       <mat-card class="width100Percent radius-10 p-t-10">
         <mat-card-header class="upload-documents-mat-header">
           <span class="text-semi-bold margin-auto">
@@ -99,13 +97,13 @@
             <span>
               <mat-list-item class="row height-100 p-r-0 mat-list-content-padding" *ngFor="let file of documentList; let i = index">
                 <!-- <mat-icon>file_copy</mat-icon> -->
-                <div class="col-x-9 display-flex">
+                <div class="col-md-9 display-flex">
                   <span>
                     <img class="file-icon" src="../../../../assets/images/file-doc.png" />
                     <span class="overflow-anywhere">{{ file.documentName }}</span>
                   </span>
                 </div>
-                <div class="col-xs-3 display-flex">
+                <div class="col-md-3 display-flex">
                   <span class="show-download">
                     <span class="p-r-10">
                       <a type="button" target="_blank" class="width-40 p-r-5" [href]="file.Url" mat-icon-button>
@@ -126,13 +124,16 @@
         </mat-card-content>
       </mat-card>
     </div>
-    <div class="col-xs-7">
-      <angular-editor formControlName="textArea" [config]="config"></angular-editor>
+    <div class="col-md-7" [ngClass]="{'p-t-20': isMobile}">
+      <angular-editor formControlName="comments" [config]="config"></angular-editor>
     </div>
   </div>
-  <div mat-dialog-actions class="flex-column">
-    <button mat-button matStepperPrevious mat-raised-button class="main-background-color main-button color-white m-b-5 mb-0">
+  <div mat-dialog-actions class="display-flex justify-content-center">
+    <button mat-button matStepperPrevious mat-raised-button type="button" class="main-background-color main-button color-white m-b-5 mb-0">
       Back
+    </button>
+    <button mat-button mat-raised-button class="main-background-color main-button color-white m-b-5 mb-0">
+      Submit
     </button>
   </div>
 </form>
