--- a/src/app/features/dashboard/bom/bom-table/bom-table.component.html
+++ b/src/app/features/dashboard/bom/bom-table/bom-table.component.html
@@ -1,7 +1,6 @@
 <div class="page-start-point changeWidth mt-5 pt-4">
   <div class="p-l-20 p-r-20 p-b-20">
-    <card-layout *ngIf="projectData" (onEdit)="editProject()" (onDelete)="deleteProject()"
-      [projectDetails]="projectData" [disableEditDelete]="true" pageType="2"></card-layout>
+    <card-layout *ngIf="projectData" (onEdit)="editProject()" (onDelete)="deleteProject()" [projectDetails]="projectData" [disableEditDelete]="true" pageType="2"></card-layout>
     <div class="row">
       <div class="col-xs-12 col-md-3">
         <mat-form-field class="example-form-field border-input">
@@ -19,22 +18,18 @@
             <span class="main-color p-l-5">Create</span>
           </mat-label>
           <mat-select class="hide-select-arrow">
-            <mat-optgroup class="option-select-height" label="Create GRN">
-              <mat-option (click)="openGrnDialog()" class="height-2-em main-color">
-                Via System
-              </mat-option>
-              <mat-option (click)="openGrnViaExcelDialog()" class="height-2-em main-color">
-                Via Excel
-              </mat-option>
-            </mat-optgroup>
-            <mat-optgroup class="option-select-height" label="Actions">
-              <mat-option class="height-2-em" (click)="createRfq()" [ngClass]="this.checkedSubcategory.length ? 'main-color' : 'main-color-faded not-allowed'">
-                Create RFQ
-              </mat-option>
-              <mat-option class="height-2-em" (click)="raiseIndent()" [ngClass]="this.checkedSubcategory.length ? 'main-color' : 'main-color-faded not-allowed'">
-                Raise Indent
-              </mat-option>
-            </mat-optgroup>
+            <mat-option class="height-2-em" (click)="createRfq()" [ngClass]="this.checkedSubcategory.length ? 'main-color' : 'main-color-faded not-allowed'">
+              Create RFQ
+            </mat-option>
+            <mat-option class="height-2-em" (click)="raiseIndent()" [ngClass]="this.checkedSubcategory.length ? 'main-color' : 'main-color-faded not-allowed'">
+              Raise Indent
+            </mat-option>
+            <mat-option (click)="openGrnDialog()" class="height-2-em main-color">
+              Create Grn Via System
+            </mat-option>
+            <mat-option (click)="openGrnViaExcelDialog()" class="height-2-em main-color">
+              Create Grn Via Excel
+            </mat-option>
           </mat-select>
         </mat-form-field>
         <mat-form-field [ngClass]="isMobile ? 'width-50' : 'width-16'" class="t-0 label-adjust">
@@ -69,12 +64,14 @@
           <th *matHeaderCellDef class="first-column-row-header">
             Material Name
           </th>
-          <td class="text-left" mat-cell *matCellDef="let element"
-            [ngClass]="{'background-color-light-grey': element.materialCustomFlag === 1 ? element.isApproved !== 1 : false}">
-            <mat-checkbox #ch (change)="getElemenetChecked(ch, element)" [checked]="element.checked"
-              [disabled]="element.materialCustomFlag === 1 ? element.isApproved !== 1 : false">
-              <div class="limited-character bom" matTooltip=" {{ element.materialName }}">{{ element.materialName }}
-                <br /></div>
+          <td class="text-left" mat-cell *matCellDef="let element" [ngClass]="{'background-color-light-grey': element.materialCustomFlag === 1 ? element.isApproved !== 1 : false}">
+            <mat-checkbox
+              #ch
+              (change)="getElemenetChecked(ch, element)"
+              [checked]="element.checked"
+              [disabled]="element.materialCustomFlag === 1 ? element.isApproved !== 1 : false"
+            >
+              <div class="limited-character bom" matTooltip=" {{ element.materialName }}">{{ element.materialName }} <br /></div>
               <div class="limited-character bom" matTooltip=" {{ element.materialGroup }}">
                 <span class="category-name">
                   {{ element.materialGroup }}
@@ -93,8 +90,12 @@
           <th *matHeaderCellDef class="text-align-center justify-center">
             Unit
           </th>
-          <td class="text-align-center" mat-cell *matCellDef="let element"
-            [ngClass]="{'background-color-light-grey': element.materialCustomFlag === 1 ? element.isApproved !== 1 : false}">
+          <td
+            class="text-align-center"
+            mat-cell
+            *matCellDef="let element"
+            [ngClass]="{'background-color-light-grey': element.materialCustomFlag === 1 ? element.isApproved !== 1 : false}"
+          >
             {{ element.materialUnit }}
           </td>
         </ng-container>
@@ -102,8 +103,12 @@
           <th *matHeaderCellDef class="text-align-center justify-center minwidth-110-px">
             Estimated Quantity
           </th>
-          <td class="text-align-center" mat-cell *matCellDef="let element"
-            [ngClass]="{'background-color-light-grey': element.materialCustomFlag === 1 ? element.isApproved !== 1 : false}">
+          <td
+            class="text-align-center"
+            mat-cell
+            *matCellDef="let element"
+            [ngClass]="{'background-color-light-grey': element.materialCustomFlag === 1 ? element.isApproved !== 1 : false}"
+          >
             {{ element.estimatedQty }}
           </td>
         </ng-container>
@@ -111,8 +116,12 @@
           <th *matHeaderCellDef class="text-align-center justify-center minwidth-110-px">
             Estimated Rate
           </th>
-          <td class="text-align-center" mat-cell *matCellDef="let element"
-            [ngClass]="{'background-color-light-grey': element.materialCustomFlag === 1 ? element.isApproved !== 1 : false}">
+          <td
+            class="text-align-center"
+            mat-cell
+            *matCellDef="let element"
+            [ngClass]="{'background-color-light-grey': element.materialCustomFlag === 1 ? element.isApproved !== 1 : false}"
+          >
             {{ element.estimatedRate }}
           </td>
         </ng-container>
@@ -120,8 +129,12 @@
           <th *matHeaderCellDef class="text-align-center justify-center minwidth-110-px">
             Indented Quantity
           </th>
-          <td class="text-align-center" mat-cell *matCellDef="let element"
-            [ngClass]="{'background-color-light-grey': element.materialCustomFlag === 1 ? element.isApproved !== 1 : false}">
+          <td
+            class="text-align-center"
+            mat-cell
+            *matCellDef="let element"
+            [ngClass]="{'background-color-light-grey': element.materialCustomFlag === 1 ? element.isApproved !== 1 : false}"
+          >
             {{ element.requestedQuantity }}
           </td>
         </ng-container>
@@ -129,20 +142,27 @@
           <th *matHeaderCellDef class="text-align-center justify-center minwidth-110-px">
             Issued To Project
           </th>
-          <td class="text-align-center" mat-cell *matCellDef="let element"
-            [ngClass]="{'background-color-light-grey': element.materialCustomFlag === 1 ? element.isApproved !== 1 : false}">
-            <ng-container *ngIf="element.issueToProject; else showZEroDataIP"> {{ element.issueToProject }}
-            </ng-container>
+          <td
+            class="text-align-center"
+            mat-cell
+            *matCellDef="let element"
+            [ngClass]="{'background-color-light-grey': element.materialCustomFlag === 1 ? element.isApproved !== 1 : false}"
+          >
+            <ng-container *ngIf="element.issueToProject; else showZEroDataIP"> {{ element.issueToProject }} </ng-container>
             <ng-template #showZEroDataIP> 0 </ng-template>
           </td>
         </ng-container>
         <ng-container matColumnDef="availableStock">
-          <th *matHeaderCellDef [hidden]="!permissionObj.rfqFlag"
-            class="text-align-center justify-center minwidth-110-px">
+          <th *matHeaderCellDef [hidden]="!permissionObj.rfqFlag" class="text-align-center justify-center minwidth-110-px">
             Available In Stock
           </th>
-          <td class="text-align-center" mat-cell [hidden]="!permissionObj.rfqFlag" *matCellDef="let element"
-            [ngClass]="{'background-color-light-grey': element.materialCustomFlag === 1 ? element.isApproved !== 1 : false}">
+          <td
+            class="text-align-center"
+            mat-cell
+            [hidden]="!permissionObj.rfqFlag"
+            *matCellDef="let element"
+            [ngClass]="{'background-color-light-grey': element.materialCustomFlag === 1 ? element.isApproved !== 1 : false}"
+          >
             <ng-container *ngIf="element.availableStock; else showZEroData"> {{ element.availableStock }}</ng-container>
             <ng-template #showZEroData> 0 </ng-template>
           </td>
@@ -152,33 +172,37 @@
           <th *matHeaderCellDef class="text-align-center justify-center minwidth-110-px">
             Attached Images
           </th>
-          <td class="text-align-center" mat-cell *matCellDef="let element"
-            [ngClass]="{'background-color-light-grey': element.materialCustomFlag === 1 ? element.isApproved !== 1 : false}">
+          <td
+            class="text-align-center"
+            mat-cell
+            *matCellDef="let element"
+            [ngClass]="{'background-color-light-grey': element.materialCustomFlag === 1 ? element.isApproved !== 1 : false}"
+          >
             <!-- View image modal link -->
-            <div *ngIf="element?.documentsList?.length" class="images-lists"
-              (click)="viewAllImages(element.projectId, element.materialId)">
+            <div *ngIf="element?.documentsList?.length" class="images-lists" (click)="viewAllImages(element.projectId, element.materialId)">
               <ng-container *ngFor="let img of element.documentsList; let i = index">
-                <img [src]="img.documentThumbnailUrl" alt="project{{i}}" class="img-fluid attached-image"
-                  *ngIf="i < 3" />
+                <img [src]="img.documentThumbnailUrl" alt="project{{ i }}" class="img-fluid attached-image" *ngIf="i < 3" />
               </ng-container>
             </div>
 
             <ng-container *ngIf="!element?.documentsList">
               <img src="assets/images/default-material.png" alt="default-material" class="img-fluid default-image" />
             </ng-container>
-
           </td>
         </ng-container>
 
         <ng-container matColumnDef="customColumn">
           <th *matHeaderCellDef></th>
-          <td class="text-right p-b-20" mat-cell *matCellDef="let element"
-            [ngClass]="{'background-color-light-grey': element.materialCustomFlag === 1 ? element.isApproved !== 1 : false}">
+          <td
+            class="text-right p-b-20"
+            mat-cell
+            *matCellDef="let element"
+            [ngClass]="{'background-color-light-grey': element.materialCustomFlag === 1 ? element.isApproved !== 1 : false}"
+          >
             <!-- <a>
               <mat-icon>edit</mat-icon>
             </a> -->
-            <span *ngIf="element.materialCustomFlag === 1 ? element.isApproved !== 1 : false"
-              class="p-r-20 p-t-10 display-inline-block color-grey">Pending</span>
+            <span *ngIf="element.materialCustomFlag === 1 ? element.isApproved !== 1 : false" class="p-r-20 p-t-10 display-inline-block color-grey">Pending</span>
             <!-- <a
               (click)="(element.materialCustomFlag === 1 ? element.isApproved !== 1 : false) ? null : issueToIndent(element.materialId, projectId)"
               class="width-15-px p-r-10 cursor-pointer issue-to-indent-icon"
@@ -192,22 +216,29 @@
               <img src="../../../../assets/images/issue_to_indent_disabled.png" />
             </a> -->
 
-            <a class="width-15-px p-l-5 cursor-pointer" matTooltip="Delete" *ngIf="
+            <a
+              class="width-15-px p-l-5 cursor-pointer"
+              matTooltip="Delete"
+              *ngIf="
                 (element.requestedQuantity === 0 || element.requestedQuantity === null) &&
                 (element.availableStock === 0 || element.availableStock === null) &&
                 (element.issueToProject === 0 || element.issueToProject === null)
-              " (click)="
+              "
+              (click)="
                 (element.materialCustomFlag === 1 ? element.isApproved !== 1 : false)
                   ? null
                   : deleteBom(element.materialId, element.projectId, element.requestedQuantity === 0 && element.availableStock === 0 && element.issueToProject === 0)
-              ">
-              <img [src]="
+              "
+            >
+              <img
+                [src]="
                   (element.requestedQuantity === 0 || element.requestedQuantity === null) &&
                   (element.availableStock === 0 || element.availableStock === null) &&
                   (element.issueToProject === 0 || element.issueToProject === null)
                     ? '../../../../assets/images/delete-button.png'
                     : '../../../../assets/images/delete-button_disable.png'
-                " />
+                "
+              />
             </a>
 
             <!-- <a
@@ -227,8 +258,7 @@
 
         <ng-container matColumnDef="expandedDetail">
           <td mat-cell *matCellDef="let element" [attr.colspan]="columnsToDisplay.length">
-            <div class="example-element-detail" *ngIf="element.materialSpecs"
-              [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
+            <div class="example-element-detail" *ngIf="element.materialSpecs" [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
               <div class="inner-table mat-elevation-z8 row" *ngIf="expandedElement">
                 <table class="col-sm-12" mat-table [dataSource]="element.materialSpecs">
                   <ng-container matColumnDef="materialName">
@@ -261,8 +291,7 @@
                     <th *matHeaderCellDef class="text-align-center">
                       Requested Material
                     </th>
-                    <td class="text-align-center" mat-cell *matCellDef="let element">{{ element.requestedQuantity }}
-                    </td>
+                    <td class="text-align-center" mat-cell *matCellDef="let element">{{ element.requestedQuantity }}</td>
                   </ng-container>
                   <ng-container matColumnDef="issueToProject">
                     <th *matHeaderCellDef class="text-align-center">
