--- a/src/app/shared/dialogs/add-grn/add-grn.component.html
+++ b/src/app/shared/dialogs/add-grn/add-grn.component.html
@@ -1,3 +1,10 @@
+<div class="header-add-edit-dialog">
+  <h1 mat-dialog-title class="light-grey">Direct GRN via system</h1>
+  <button type="button" class="close" (click)="cancel()" aria-label="Close">
+    <span aria-hidden="true">×</span>
+  </button>
+</div>
+
 <mat-horizontal-stepper (selectionChange)="selectionChange($event)" #stepper>
   <mat-step stepControl="Add Materials">
     <ng-template matStepLabel>Add Materials</ng-template>
