--- a/src/app/features/dashboard/bom/bom-table/bom-table.component.html
+++ b/src/app/features/dashboard/bom/bom-table/bom-table.component.html
@@ -13,7 +13,7 @@
       </div>
 
       <div class="col-xs-12 col-md-9 p-t-10" [ngClass]="!isMobile ? 'text-right' : ''">
-        <mat-form-field [ngClass]="isMobile ? 'width-50' : 'width-15'" class="t-0 label-adjust">
+        <mat-form-field [ngClass]="isMobile ? 'width-50' : 'width-15'" class="t-0 label-adjust bom-select-menus">
           <mat-label
             ><img src="../../../assets/images/create-icon.svg" alt="" />
             <span class="main-color p-l-5">Create</span>
@@ -37,7 +37,7 @@
             </mat-optgroup>
           </mat-select>
         </mat-form-field>
-        <mat-form-field [ngClass]="isMobile ? 'width-50' : 'width-16'" class="t-0 label-adjust">
+        <mat-form-field [ngClass]="isMobile ? 'width-50' : 'width-16'" class="t-0 label-adjust bom-select-menus">
           <mat-label
             ><img src="../../../assets/images/create-icon.svg" alt="" />
             <span class="main-color p-l-5">+Add/Edit</span>
