--- a/src/app/features/rfq/create-rfq/rfq-quantity-makes/rfq-quantity-makes.component.html
+++ b/src/app/features/rfq/create-rfq/rfq-quantity-makes/rfq-quantity-makes.component.html
@@ -101,8 +101,8 @@
                 </td>
               </ng-container>
               <ng-container matColumnDef="Fullfillment Date" class="date-dialog-add-edit">
-                <th mat-header-cell *matHeaderCellDef>Fullfillment Date</th>
-                <td mat-cell *matCellDef="let element; let i = index">
+                <th mat-header-cell *matHeaderCellDef class="fulfillment-date-col">Fullfillment Date</th>
+                <td mat-cell *matCellDef="let element; let i = index" class="fulfillment-date-col">
                   <mat-form-field class="border-input"
                     [formGroupName]="i + (mati ? projectSelectedMaterials[mati].prevMatListLength : 0)">
                     <!-- <mat-label>Fullfil </mat-label> -->
@@ -157,10 +157,10 @@
               </ng-container>
 
               <ng-container matColumnDef="Attached Images">
-                <th mat-header-cell *matHeaderCellDef class="text-align-center justify-center minwidth-110-px">
+                <th mat-header-cell *matHeaderCellDef class="text-align-center justify-center minwidth-110-px attached-images-col">
                   Attached Images
                 </th>
-                <td class="text-align-center" mat-cell *matCellDef="let element"
+                <td class="text-align-center attached-images-col" mat-cell *matCellDef="let element"
                   [ngClass]="{'background-color-light-grey': element.materialCustomFlag === 1 ? element.isApproved !== 1 : false}">
                   <!-- View image modal link -->
                   <div *ngIf="element?.documentList?.length" class="images-lists mt-3"
@@ -180,8 +180,8 @@
               </ng-container>
 
 
-              <tr mat-row *matHeaderRowDef="displayedColumns"></tr>
-              <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+              <tr mat-row *matHeaderRowDef="displayedColumns" class="tbl-header-cols"></tr>
+              <tr mat-row *matRowDef="let row; columns: displayedColumns" class="tbl-body-cols"></tr>
             </table>
 
           </div>
