--- a/src/app/shared/dialogs/add-grn/add-grn.component.html
+++ b/src/app/shared/dialogs/add-grn/add-grn.component.html
@@ -4,14 +4,15 @@
     <span aria-hidden="true">×</span>
   </button>
 </div>
-
-<mat-horizontal-stepper (selectionChange)="selectionChange($event)" #stepper>
-  <mat-step stepControl="Add Materials">
-    <ng-template matStepLabel>Add Materials</ng-template>
-    <app-add-material #myMaterial> </app-add-material>
-  </mat-step>
-  <mat-step stepControl="Add Supplier">
-    <ng-template matStepLabel>Add Supplier</ng-template>
-    <app-add-supplier *ngIf="materialList.length" [materialList]="this.materialList" [countryList]="this.countryList" [supplierList]="this.supplierList"> </app-add-supplier>
-  </mat-step>
-</mat-horizontal-stepper>
+<div mat-dialog-content>
+  <mat-horizontal-stepper (selectionChange)="selectionChange($event)" #stepper>
+    <mat-step stepControl="Add Materials">
+      <ng-template matStepLabel>Add Materials</ng-template>
+      <app-add-material #myMaterial> </app-add-material>
+    </mat-step>
+    <mat-step stepControl="Add Supplier">
+      <ng-template matStepLabel>Add Supplier</ng-template>
+      <app-add-supplier *ngIf="materialList.length" [materialList]="this.materialList" [countryList]="this.countryList" [supplierList]="this.supplierList"> </app-add-supplier>
+    </mat-step>
+  </mat-horizontal-stepper>
+</div>
