--- a/src/app/features/dashboard/bom/bom.component.html
+++ b/src/app/features/dashboard/bom/bom.component.html
@@ -12,6 +12,10 @@
                   <mat-icon>search</mat-icon>
                 </button>
               </mat-form-field>
+
+              <button mat-raised-button class="main-background-color main-button color-white" [routerLink]="['/project-dashboard/bom/'+projectId+'/copy-materials']">
+                Copy Materials
+              </button>
             </div>
             <div class="col-xs-3 text-right">
               <mat-form-field class="border-select p-t-0">
