--- a/src/app/features/my-material/my-materials-tab/myMaterialTab.component.html
+++ b/src/app/features/my-material/my-materials-tab/myMaterialTab.component.html
@@ -6,8 +6,11 @@
         <div>
           <p>
             There is no custom material added in the project. <br />
-            Please add material either from the above or BOM.
+            Please add material either from bellow or BOM.
           </p>
+        </div>
+        <div>
+          <button mat-raised-button class="main-background-color main-button color-white" (click)="openAddMaterial()">+Add Material</button>
         </div>
       </div>
     </div>
