--- a/src/app/features/users/my-subscriptions/my-subscriptions.component.html
+++ b/src/app/features/users/my-subscriptions/my-subscriptions.component.html
@@ -1,3 +1,3 @@
-<div class="page-start-point">
+<div class="page-start-point changeWidth mt-5 pt-4">
     <app-subscriptions [data]="subscriptionsData" [trialAction]="false"></app-subscriptions>
 </div>
