--- a/src/app/shared/header/sidenav-list.html
+++ b/src/app/shared/header/sidenav-list.html
@@ -23,6 +23,15 @@
     </ng-container>
   </ng-container>
 
+  <div [ngClass]="(buttonName && (buttonName === 'My Plans')) ? 'display-flex active' : 'display-flex'">
+    <a href="javascript:void(0)" mat-list-item (click)="goToMyPlans()">
+      <img src="../../../assets/images/logout-hamburger.svg" alt="" />
+      <span class="p-l-15">
+        My Plan / Upgrade
+      </span>
+    </a>
+  </div>
+
   <div class="display-flex">
     <a href="javascript:void(0)" mat-list-item (click)="logout()">
       <img src="../../../assets/images/logout-hamburger.svg" alt="" />
