--- a/src/assets/scss/pages/common.scss
+++ b/src/assets/scss/pages/common.scss
@@ -400,6 +400,8 @@ ngx-mat-drp-picker-overlay {
 }
 .actv-btn.active {
   font-weight: 500 !important;
+  border-bottom: 2px solid #f47721;
+  border-radius: 0;
 }
 
 
