--- a/src/assets/scss/pages/subscriptions.scss
+++ b/src/assets/scss/pages/subscriptions.scss
@@ -200,6 +200,13 @@
             font-size: 12px;
             padding: 0 10px !important;
         }
+        .plan-limit{
+            span{
+                font-size: 12px;
+                padding:0 8px;
+                line-height: 34px;
+            }
+        }
     }
 
     .redirections{
