--- a/src/app/shared/dialogs/add-grn/add-material/add-material.component.html
+++ b/src/app/shared/dialogs/add-grn/add-material/add-material.component.html
@@ -87,6 +87,7 @@
       </div>
     </div>
   </div>
+  <div class="light-grey fontsize-13-px p-t-20">*Total amount and unit price are inclusive of GST</div>
   <div mat-dialog-actions class="flex-column">
     <button mat-button mat-raised-button [disabled]="addMaterialsForm.invalid" class="main-background-color main-button color-white m-b-5 mb-0">
       <!-- <button mat-button matStepperNext mat-raised-button class="main-background-color main-button color-white m-b-5 mb-0" [disabled]="addMaterialsForm && !addMaterialsForm.valid"> -->
