--- a/src/app/shared/dialogs/addGrn-viaExcel/addGrnViaExcel.component.html
+++ b/src/app/shared/dialogs/addGrn-viaExcel/addGrnViaExcel.component.html
@@ -10,7 +10,7 @@
       <a class="cursor-pointer" (click)="downloadExcel('assets/images/bom_template.xlsx')"> <img src="assets/images/download.svg" alt="download" class="width-35 mr-2" /></a>
       <mat-card-content class="m-t-10 main-color text-semi-bold fontsize-17-px">
         <p>
-          Download the tempelate
+          Download the template
         </p>
       </mat-card-content>
     </mat-card>
@@ -36,7 +36,7 @@
       <!-- <a (click)="downloadExcel('assets/images/bom_template.xlsx')">    `</a> -->
       <mat-card-content class="m-t-10 main-color text-semi-bold fontsize-17-px">
         <p>
-          Upload the tempelate
+          Upload the template
         </p>
       </mat-card-content>
     </mat-card>
